Switched to a less buggy notification library (toastr). Cleaned up some of the code in msg.js to improve readability

--- a/msg.css
+++ b/msg.css
@@ -5,3 +5,9 @@
     width: 99%;
     height: 24px;
 }
+
+#generatingMessages {
+    display: inline-block;
+    padding-left: 2em;
+    color: midnightblue;
+}
